--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -55,7 +55,7 @@
    -->
 
 <div class="row">
-  <div class="col-md-6">
+  <!-- <div class="col-md-6"> -->
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
       <li>Creating a repository</li>
