--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -51,11 +51,11 @@
       <li>Defensive programming</li>
       <li><a href="{{site.swc_pages}}/matlab-novice-inflammation/reference/">Reference...</a></li>
      </ul>
+-->
    </div>
-   -->
 
 <div class="row">
-  <!-- <div class="col-md-6"> -->
+   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
       <li>Creating a repository</li>
