--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -5,7 +5,7 @@
       <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice/">Automating tasks with the Unix shell</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-inflammation">Programming with R (Part 1)</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder">R for Reproducible Scientific Analysis (Part 1)</td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
@@ -14,7 +14,7 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:30</td>  <td><a href="http://swcarpentry.github.io/r-novice-inflammation">Programming with R (Part 2)</td> </tr>
+      <tr> <td>09:30</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis (Part 2)</td> </tr>
       <tr> <td>11:00</td>  <td>Coffee</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td><a href="http://noracmitchell.github.io/git-novice.html">Version control with Git</td> </tr>
