--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -31,12 +31,16 @@
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
     <ul>
-      <li>Working with vectors and data frames</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Using R from the command line</li>
-      <li><a href="{{site.swc_pages}}/r-novice-inflammation/reference/">Reference...</a></li>
+      <li>Introduction to R and RStudio</li>
+      <li>Project management with RStudio</li>
+      <li>Seeking help</li>
+      <li>Data structures</li>
+      <li>Exploring data frames</li>
+      <li>Subsetting data</li>
+      <li>Control flow</li>
+      <li>Functions explained</li>
+      <li>Creating publication quality graphics</li>
+      <li><a href="{{site.swc_pages}}/r-novice-gapminder/reference/">Reference...</a></li>
     </ul>
   </div>
 
